--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,6 @@
+title: Stars and Awards: Unraveling 'Epic TV Adventures' Success Through Comprehensive Dataset Analysis
+#logo: /assets/img/headshot_circle.png
+#description: text below image
+#show_downloads: true
+theme: jekyll-theme-minimal
 
